# OmniReader

./: .gitignore  LICENSE  README.md
OmniReaderApp/: Package.swift
OmniReaderApp/OmniReaderApp/: OmniReaderApp.swift  RustBridge.swift
OmniReaderApp/OmniReaderApp/Models/: Book.swift
OmniReaderApp/OmniReaderApp/ViewModels/: LibraryViewModel.swift
OmniReaderApp/OmniReaderApp/Views/: ContentView.swift  LibraryView.swift  ReaderView.swift
omnireader-core/: Cargo.toml
omnireader-core/src/: annotation.rs  book.rs  db.rs  epub.rs  error.rs  lib.rs  pdf.rs
